# takehome_aaelrx

./: .gitignore  CMakeLists.txt  README.md  notes.txt
src/: batch_service.cpp  batch_service.hpp  common.hpp  crypto_sizes.hpp  exception.hpp  key.cpp  key.hpp  key_service.cpp  key_service.hpp  main.cpp  message_service.hpp  microservice.cpp  microservice.hpp  record_types.hpp  sink_service.cpp  sink_service.hpp  source_service.cpp  source_service.hpp  startup.cpp  startup.hpp  threadsafe_queue.hpp  utils.hpp
